--- a/client/src/directories/Calendar.html
+++ b/client/src/directories/Calendar.html
@@ -11,31 +11,47 @@
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.1.0/main/min.js"></script>
 </head>>
 <body>
-    <input type="text" placeholder="Enter new to-do">
-    <p><input type="text" placeholder="Enter category" list="categoryList"></p>
-    <datalist id="categoryList">
-        <option value="Personal"></option>
-        <option value="Work"></option>
-    </datalist>
-    <p><input type="date" id="dateInput"></p>
-    <p><input type="time" id="timeInput"></p>
-    <button id="addBtn">Add</button>
-    <p><button id="sortBtn">Sort</button></p>
-    <ul></ul>
-    <table id="todoTable">
-        <tr>
-            <td></td>
-            <td>Date</td>
-            <td>Time</td>
-            <td>to-do</td>
-            <td>
-                <select id="categoryFilter">
-                </select>
-            </td>>
-            <td></td>
-        </tr>
-    </table>
-    <div id='calendar'></div>
+    <h3>My To-do List</h3>
+    <div class="todo-grid-parent">
+        <div>
+            <div class="todo-input todo-block">
+                <span>To-do:</span>
+                <input type="text" placeholder="Enter new to-do">
+                <span>Category: </span>
+                <input type="text" placeholder="Enter category" list="categoryList">
+                <datalist id="categoryList">
+                    <option value="Personal"></option>
+                    <option value="Work"></option>
+                </datalist>
+                <span>Date: </span>
+                <input type="date" id="dateInput">
+                <span>Time: </span>
+                <input type="time" id="timeInput">
+                <span></span>
+                <button id="addBtn">Add</button>
+                <span></span>
+                <button id="sortBtn">Sort</button>
+            </div>
+            <!--<ul></ul>-->
+            <table id="todoTable" class="todo-block">
+                <tr>
+                    <td></td>
+                    <td>Date</td>
+                    <td>Time</td>
+                    <td>to-do</td>
+                    <td>
+                        <select id="categoryFilter">
+                        </select>
+                    </td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
+        <div class="todo-calendar todo-block">
+            <div id='calendar'></div>
+        </div>
+    </div>
+    
     <script src="Calendar.js"></script>
 </body>
 </html>
