--- a/client/src/directories/Calendar.html
+++ b/client/src/directories/Calendar.html
@@ -9,6 +9,7 @@
     "stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.1.0/main.min.css">
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.1.0/main/min.js"></script>
+    <script src="Calendar.js" defer></script>
 </head>>
 <body>
     <h3>My To-do List</h3>
