--- a/client/src/CalEven/Calendar.html
+++ b/client/src/CalEven/Calendar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gordon's To-do List</title>
+  <title>To-do List</title>
   <meta name="description" content="Help managing daily activities. Be organized.">
   <link rel="stylesheet" href="todo.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.4.0/main.min.css">
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.4.0/main.min.js"></script>
   <script src="Calendar.js" defer></script>
+  <script src="App.js" defer></script>
 </head>
 
 <body>
